--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 	</head>
 
 	<body class="home">
-		<header class="topo">
-			<div>
-				<div></div><img class="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
-				<nav class="links">
-					<a>Home</a>
-					<a>Quem Somos</a>
-					<a>Serviços</a>
-					<a>Localização</a>
-					<a>Contato</a>
-				</nav>
-			</div>
+		<header>
+			<nav class="links">
+				<img id="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
+				<a href="#">Home</a>
+				<a href="#">Quem Somos</a>
+				<a href="#">Serviços</a>
+				<a href="#">Localização</a>
+				<a href="#">Contato</a>
+			</nav>
 		</header>
 		<hr>
+		
 	</body>
 
 
