beta 13/03 mudança total do site

--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 		<link rel="shortcut icon" href="img/icon.png">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
+	<body> 
+		<header> 
+		 <nav> 
+		  <img id="logoF" src="img/logoF.jpeg" alt="foto">
+		  <button>Ligue</button>
+		 
+		  <hr>
+		 </nav> 
+		 <div id="ajustedalinha"></div> 
+		 <h1>Soluções gerais em funilaria.</h1> 	
+		 <input type="button" value="Entrar em Contato"> 
+		</header> 
+	   
+	  </body>
+</html>
 
-	<body class="home">
-		<header>
-			<nav class="links">
-				<img id="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
-				<a href="#">Home</a>
-				<a href="#">Quem Somos</a>
-				<a href="#">Serviços</a>
-				<a href="#">Localização</a>
-				<a href="#">Contato</a>
-			</nav>
-		</header>
-		<hr>
-		
-	</body>
-
-
-</html> 	
-
+	
