formatação do cabeçario e inicio do centro

--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
 		<link rel="shortcut icon" href="img/icon.png">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
-	<body> 
-		<header> 
-		 <nav> 
-		  <img id="logoF" src="img/logoF.jpeg" alt="foto">
-		  <button>Ligue</button>
-		 
-		  <hr>
-		 </nav> 
-		 <div id="ajustedalinha"></div> 
-		 <h1>Soluções gerais em funilaria.</h1> 	
-		 <input type="button" value="Entrar em Contato"> 
-		</header> 
-	   
-	  </body>
-</html>
-
 	
+	<body class="home">
+		<header class="topo">
+			<img class="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
+
+				<nav class="links">
+					<a>Home</a>
+					<a>Quem Somos</a>
+					<a>Serviços</a>
+					<a>Localização</a>
+					<a>Contato</a>
+				</nav>
+		</header>
+		<hr>
+		<div class="galeria">
+			<div class="separator">Funilaria e serviços Gerais em Telhados há mais de 15 anos
+
+			</div>
+		</div>
+		
+		
+
+	</body>
+</html> 	
+
