Mudanças para estética do site

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link rel="shortcut icon" href="img/icon.png">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	</head>
-	
 	<body class="home">
 		<header class="topo">
-			<img class="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
+			<div style="margin: auto; width: 80%; display: flex;">
+				<img class="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
 
 				<nav class="links">
 					<a>Home</a>
@@ -21,16 +21,89 @@
 					<a>Localização</a>
 					<a>Contato</a>
 				</nav>
+			</div>
 		</header>
-		<hr>
+		<hr style="color:black 1px 1px 1px; opacity: 50%;">
+		
 		<div class="galeria">
-			<div class="separator">Funilaria e serviços Gerais em Telhados há mais de 15 anos
+			<div class="separator">Funilaria e serviços Gerais em Telhados há mais de 15 anos</div>
+				<div class="lista">
+					<!--linha 1-->
+					<div class="lista-item">
+						<!--coluna 1-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
 
+					<div class="lista-item">
+						<!--coluna 2-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 3-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 4-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 5-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+				</div>
+
+				<div class="lista">
+					<!--linha 2-->
+					<div class="lista-item">
+						<!--coluna 1-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 2-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 3-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 4-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+
+					<div class="lista-item">
+						<!--coluna 5-->
+						<img src="img/placeholder.jpg" class="lista-img">
+						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
+						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+					</div>
+				</div>
 			</div>
 		</div>
-		
-		
-
 	</body>
-</html> 	
-
+</html>
