--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</nav>
 			</div>
 		</header>
-		<hr style="color:black 1px 1px 1px; opacity: 50%;">
+		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
 		
 		<div class="galeria">
 			<div class="separator">Funilaria e serviços Gerais em Telhados há mais de 15 anos</div>
