--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 	</head>
 	<body class="home">
 		<header class="topo">
-			<div style="margin: auto; width: 80%; display: flex;">
 				<img class="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
 
 				<nav class="links">
-					<a>Home</a>
-					<a>Quem Somos</a>
-					<a>Serviços</a>
-					<a>Localização</a>
-					<a>Contato</a>
+					<button type="button" class="clickbotao" style="background-color:rgb(182, 182, 182); opacity: 50%;">Home</button>
+					<button type="button" class="linkbotao">Quem Somos</button>
+					<button type="button" class="linkbotao">Serviços</button>
+					<button type="button" class="linkbotao" onclick="window.location.href='localizacao.html';">Localização</button>
+					<button type="button" class="linkbotao">Contato</button>
 				</nav>
-			</div>
 		</header>
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
-		
+		<div class="banner">
+
+		</div>
 		<div class="galeria">
 			<div class="separator">Funilaria e serviços Gerais em Telhados há mais de 15 anos</div>
 				<div class="lista">
@@ -64,9 +64,6 @@
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
-				</div>
-
-				<div class="lista">
 					<!--linha 2-->
 					<div class="lista-item">
 						<!--coluna 1-->
