muitas mudanças esqueci o que mudei :/

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</nav>
 		</header>
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
-		<div class="banner">
+		<div class="banner" style="background: url(../img/placebanner.jpg) center no-repeat;">
 
 		</div>
 		<div class="galeria">
