--- a/contato.html
+++ b/contato.html
@@ -14,13 +14,11 @@
 				<img class="logo" src="img/logoF.jpeg" alt="logo Fernando calhas">
 
 				<nav class="links">
-					<button type="button" class="clickbotao" style="background-color:rgb(182, 182, 182); opacity: 50%;">Home</button>
+					<button type="button" class="linkbotao" onclick="window.location.href='index.html';">Home</button>
 					<button type="button" class="linkbotao">Quem Somos</button>
 					<button type="button" class="linkbotao">Serviços</button>
 					<button type="button" class="linkbotao" onclick="window.location.href='localizacao.html';">Localização</button>
-					<button type="button" class="linkbotao">Contato</button>
+					<button type="button" class="clickbotao" style="background-color:rgb(182, 182, 182); opacity: 50%;">Contato</button>
 				</nav>
 		</header>
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
-    </body>
-</html>
