--- a/localizacao.html
+++ b/localizacao.html
@@ -8,13 +8,6 @@
 		<meta name="keywords" content="">
 		<link rel="shortcut icon" href="img/icon.png">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
-		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-		integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-		crossorigin=""/>
-		<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
-		integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
-		crossorigin="">
-		</script>
 	</head>
 	<body class="home">
 		<header class="topo">
@@ -25,9 +18,10 @@
 					<button type="button" class="linkbotao">Quem Somos</button>
 					<button type="button" class="linkbotao">Serviços</button>
 					<button type="button" class="clickbotao" style="background-color:rgb(182, 182, 182); opacity: 50%;">Localização</button>
-					<button type="button" class="linkbotao">Contato</button>
+					<button type="button" class="linkbotao" onclick="window.location.href='contato.html';">Contato</button>
 				</nav>
 		</header>
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
-
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2055.8329052147783!2d-51.02002945854945!3d-29.936724014878386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951974ae4e88a691%3A0x45bb2ab3e399f2a8!2sFAQI%20-%20Faculdade%20QI%20Brasil%20-%20Gravata%C3%AD!5e0!3m2!1spt-BR!2sbr!4v1679339080384!5m2!1spt-BR!2sbr" width="80%" height="500px" style="border:0; margin-top: 50px; margin-left: 10%; margin-right: 10%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+	</body>
+</html>
