--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</nav>
 		</header>
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
-		<div class="banner" style="background: url(../img/placebanner.jpg) center no-repeat;">
+		<div class="banner" style="background: url(../img/banner.jpg) center no-repeat;">
 
 		</div>
 		<div id="galeria">
@@ -31,35 +31,35 @@
 					<!--linha 1-->
 					<div class="lista-item">
 						<!--coluna 1-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/algerosa.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 2-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/calhas.png" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 3-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/chamines.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 4-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/churrasquiras.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 5-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/coifas.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
@@ -67,35 +67,35 @@
 					<!--linha 2-->
 					<div class="lista-item">
 						<!--coluna 1-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/dutos.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 2-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/exaustoresjpg.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 3-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/lareirasjpg.png" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 4-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/telhados.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 5-->
-						<img src="img/placeholder.jpg" class="lista-img">
+						<img src="img/wppcontato.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
 						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 					</div>
@@ -106,7 +106,7 @@
 			<div id="quemsomos">
 				<p style="margin-right: 50px;">
 				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate perferendis tempore error, pariatur dolor magnam eveniet deserunt numquam nostrum ad illum assumenda, maiores dignissimos aperiam porro recusandae, ipsa mollitia laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsa ullam aut eius voluptatum! Dolor, placeat dolore? Iure ab veritatis nisi dolore voluptatum omnis deleniti et soluta officiis. In, veritatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae explicabo obcaecati quae temporibus. Recusandae provident non dolore odio modi consequatur est maxime! Laudantium, incidunt laborum. Doloribus est doloremque iure numquam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident assumenda commodi esse, ipsum quo ea cumque ducimus facilis ipsam! Similique, est. Beatae incidunt illum sint repellendus, ad amet facere optio!</p>
-				<img src="img/placebanner.jpg" width="100%" display="block">
+				<img src="img/anuncio.png" width="100%" style="display: block;">
 			</div>
 			<div style="background-color: rgb(165, 165, 165); height: 300px; width: 100%; margin-top: 50px; box-shadow: 1px 1px 1px inset gray;">
 				<div style="display:flex; justify-content:space-around; text-align:left">
