--- a/localizacao.html
+++ b/localizacao.html
@@ -15,8 +15,8 @@
 
 				<nav class="links">
 					<button type="button" class="linkbotao" onclick="window.location.href='index.html';">Home</button>
-					<button type="button" class="linkbotao">Quem Somos</button>
-					<button type="button" class="linkbotao">Serviços</button>
+					<button type="button" class="linkbotao" onclick="window.location.href='index.html#quemsomos';">Quem Somos</button>
+					<button type="button" class="linkbotao" onclick="window.location.href='index.html#galeria';">Serviços</button>
 					<button type="button" class="clickbotao" style="background-color:rgb(182, 182, 182); opacity: 50%;">Localização</button>
 					<button type="button" class="linkbotao" onclick="window.location.href='contato.html';">Contato</button>
 				</nav>
