--- a/contato.html
+++ b/contato.html
@@ -8,6 +8,7 @@
 		<meta name="keywords" content="">
 		<link rel="shortcut icon" href="img/icon.png">
 		<link rel="stylesheet" type="text/css" href="css/estilo.css">
+		<script type="text/javascript" src="js/js.js"></script>
 	</head>
 	<body class="home">
 		<header class="topo">
@@ -24,23 +25,51 @@
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
 
 
+		
+		
+		<form method="post" name="contato" style="margin:auto; width:80%; margin-top:50px" action="" onSubmit="return validate()">
+				<h2>Formulário de atendimento</h2>
+				<span style="color: red;">*</span><input id="nome" size="27" type="text" name="txtnome" placeholder="Nome" style="margin-top:50px;">
+				<br>
+				<span style="color: red;">*</span><input id="endereco" size="40" type="text" name="txtendereco" placeholder="Endereço">
+				<br>
+				<br>
+				<span style="color: red;">*</span><select id="servico" name="selectservico" name="servico">
+					<option value="none">Serviço</option>
+					<option value="1">opção 1</option>
+					<option value="2">opção 2</option>
+					<option value="3">opção 3</option>
+					<option value="4">opção 4</option>
+					<option value="outro">Outro:</option>
+				</select>
+				<input type="text" name="txtoutro" id="outro" disabled style="opacity:50%">
+				<br><br>
+				<input type="submit" id="enviar" value="Enviar" style="margin-left:300px">
+		</form>
 
 
-        <div style="background-color: rgb(165, 165, 165); height: 300px; width: 100%; margin-top: 50px; box-shadow: 1px 1px 1px inset gray;">
-            <div style="display:flex; justify-content:space-around; text-align:left">
-                <div style="background-color: rgb(150, 150, 150); border:1px solid rgb(122, 122, 122); border-radius:3px; margin-top:20px;">
-                <h3 style="margin-top:35px; margin-left: 50px;">Horários de Atendimento</h3>
-                <p style="margin-top:10px; margin-left: 50px;">Segunda a Sexta :
-                <br>
-                    das 8h às 12h e da 13:30h às 18h
-                <br>	
-                    Sábados:
-                <br>	
-                    das 8h às 12h</p>
-                    <br>
-                    <h4 style="margin-top: 10px; margin-left: 50px; margin-right: 70px; margin-bottom:30px">Atendimento na região metropolitana do Rio grande do sul.</h4>
-                </div>
 
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2055.8329052147783!2d-51.02002945854945!3d-29.936724014878386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951974ae4e88a691%3A0x45bb2ab3e399f2a8!2sFAQI%20-%20Faculdade%20QI%20Brasil%20-%20Gravata%C3%AD!5e0!3m2!1spt-BR!2sbr!4v1679339080384!5m2!1spt-BR!2sbr" width="300px" height="200px" style="border:0; margin-top: 50px; margin-left: 10%; margin-right: 10%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </div>
+		<p style="color: red; margin-left:145px" id="aviso"></p>
+
+
+
+        <div class="foot">
+			<div style="display:flex; justify-content:space-around; text-align:left">
+				<div style="background-color: rgb(124, 123, 123); border-radius:10px; margin-top:20px; padding: 10px; padding-bottom:35px">
+				<h3 style="margin-top:35px; margin-left: 50px;">Horários de Atendimento</h3>
+				<p style="margin-top:10px; margin-left: 50px;">Segunda a Sexta :
+				<br>
+					das 8h às 12h e da 13:30h às 18h
+				<br>	
+					Sábados:
+				<br>	
+					das 8h às 12h</p>
+					<br>
+					<h4 style="margin-top: 10px; margin-left: 50px; margin-right: 70px; margin-bottom:30px">Atendimento na região metropolitana do Rio grande do sul.</h4>
+				</div>
+
+				<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2055.8329052147783!2d-51.02002945854945!3d-29.936724014878386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951974ae4e88a691%3A0x45bb2ab3e399f2a8!2sFAQI%20-%20Faculdade%20QI%20Brasil%20-%20Gravata%C3%AD!5e0!3m2!1spt-BR!2sbr!4v1679339080384!5m2!1spt-BR!2sbr" width="550px" height="260px" style="border:0; margin-top: 20px; margin-left: 5%; margin-right: 20px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			</div>
+		</div>
+	</body>
+</html>
