Pronto para apresentação

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				</nav>
 		</header>
 		<hr style="height: 0,01%; color:black 0,01% 0,01% 0,01%; opacity: 50%;">
-		<div class="banner" style="background: url(../img/banner.jpg) center no-repeat;">
+		<!-- <div class="banner" style="background: url(../img/banner.jpg) center no-repeat;"> -->
 
 		</div>
 		<div id="galeria">
@@ -32,80 +32,80 @@
 					<div class="lista-item">
 						<!--coluna 1-->
 						<img src="img/algerosa.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Algerosas</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Algerosas na região metropolitana do Rio Grande do sul</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 2-->
 						<img src="img/calhas.png" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Calhas</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Calhas na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 3-->
 						<img src="img/chamines.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Chaminés</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Chaminés na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 4-->
 						<img src="img/churrasquiras.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Churrasquiras</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Churrasquiras na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 5-->
 						<img src="img/coifas.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Coifas</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Coifas na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<!--linha 2-->
 					<div class="lista-item">
 						<!--coluna 1-->
 						<img src="img/dutos.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Dutos</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Dutos na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 2-->
 						<img src="img/exaustoresjpg.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Exaustores</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Exaustores na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 3-->
 						<img src="img/lareirasjpg.png" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Lareiras</h3>
+						<p style="margin-top: 10px">Fabricação e instalação de Lareiras na região metropolitana do Rio Grande do sul.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 4-->
 						<img src="img/telhados.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Telhados</h3>
+						<p style="margin-top: 10px">Contrução e manutenção telhados.</p>
 					</div>
 
 					<div class="lista-item">
 						<!--coluna 5-->
 						<img src="img/wppcontato.jpg" class="lista-img">
-						<h4 style="margin-top: 10px;">Lorem Ipsum</h3>
-						<p style="margin-top: 10px">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+						<h4 style="margin-top: 10px;">Contato</h3>
+						<p style="margin-top: 10px">Contrate Nosso serviço via WhatsApp.</p>
 					</div>
 
 				</div>
 			</div>
 			<hr style="border-top: 2px dashed; opacity: 50%; margin: auto; margin-left: 10%; margin-right: 10%;">
 			<div id="quemsomos">
-				<p style="margin-right: 50px;">
-				Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate perferendis tempore error, pariatur dolor magnam eveniet deserunt numquam nostrum ad illum assumenda, maiores dignissimos aperiam porro recusandae, ipsa mollitia laudantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ipsa ullam aut eius voluptatum! Dolor, placeat dolore? Iure ab veritatis nisi dolore voluptatum omnis deleniti et soluta officiis. In, veritatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae explicabo obcaecati quae temporibus. Recusandae provident non dolore odio modi consequatur est maxime! Laudantium, incidunt laborum. Doloribus est doloremque iure numquam? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident assumenda commodi esse, ipsum quo ea cumque ducimus facilis ipsam! Similique, est. Beatae incidunt illum sint repellendus, ad amet facere optio!</p>
+				<h3 style="margin-right: 50px;">
+				Somos uma empresa famíliar que lida com manutenção de telhado e soluções em funilaria, atuamos na região metropolitana de Porto Alegre. </h3>
 				<img src="img/anuncio.png" width="100%" style="display: block;">
 			</div>
 			<div class="foot">
