caixa de contato leva até os contatos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<p style="margin-top: 10px">Contrução e manutenção telhados.</p>
 					</div>
 
-					<div class="lista-item">
+					<div class="lista-item" onclick="window.location.href='contato.html';" style="cursor:pointer">
 						<!--coluna 5-->
 						<img src="img/wppcontato.jpg" class="lista-img">
 						<h4 style="margin-top: 10px;">Contato</h3>
